--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-            <h1>TO DO LIST</h1>
-            <div class="input-section"></div>
-                <input type="text">
-                <button class="addBtn" type="button">+</button>
+        <div class="wrapper">
+            <div class="container">
+                <h1>TO DO LIST</h1>
+                <div class="input-section"></div>
+                    <input type="text">
+                    <button class="addBtn" type="button">+</button>
+                    <p class="Error"></p>
+                </div>
+            </div>
+            <div class="list-section">
+                <ul class="list">
+                </ul>
             </div>
         </div>
-        <div class="list-section">
-            <ul class="list">
-            </ul>
-        </div>
-        
+        <script src="app.js"></script>
     </body>
     <script src="app.js"></script>
 </html>
